# TaskbarAudioAnalyzer

./: .gitignore  LICENSE  README.en.md  README.md  THIRD-PARTY-NOTICES.md
scripts/: Build-Release.ps1  Build-Vst3.ps1  Install-Vst3.ps1  Start-Analyzer.ps1
src/TaskbarAudioAnalyzer/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  TaskbarAudioAnalyzer.csproj
src/TaskbarAudioAnalyzer/Audio/: AudioMixing.cs  ShortTermLoudnessMeter.cs
src/TaskbarAudioTap/: CMakeLists.txt
src/TaskbarAudioTap/source/: cids.h  controller.cpp  entry.cpp  processor.cpp  shared_audio_writer.cpp  shared_audio_writer.h  version.h
src/TaskbarAudioTap/tests/: ownership_test.cpp
tests/TaskbarAudioAnalyzer.Tests/: Program.cs  TaskbarAudioAnalyzer.Tests.csproj
